tests/baselines/reference/templateLiteralTypesPatternsPrefixSuffixAssignability.errors.txt
tests/cases/conformance/types/literal/templateLiteralTypesPatternsPrefixSuffixAssignability.ts(1,7): error TS2322: Type '":"' is not assignable to type '`:${string}:`'.
tests/cases/conformance/types/literal/templateLiteralTypesPatternsPrefixSuffixAssignability.ts(3,7): error TS2322: Type '"::"' is not assignable to type '`:${string}:${string}:`'.


==== tests/cases/conformance/types/literal/templateLiteralTypesPatternsPrefixSuffixAssignability.ts (2 errors) ====
    const s1: `:${string}:` = ":"; // should error
          ~~
!!! error TS2322: Type '":"' is not assignable to type '`:${string}:`'.
    const s2: `:${string}:` = "::"; // ok
    const s3: `:${string}:${string}:` = "::"; // should error
          ~~
!!! error TS2322: Type '"::"' is not assignable to type '`:${string}:${string}:`'.
    const s4: `:${string}:${string}:` = ":::"; // ok